fix body overflow on dashboard

--- a/IPython/frontend/html/notebook/static/less/notebook.less
+++ b/IPython/frontend/html/notebook/static/less/notebook.less
@@ -7,8 +7,11 @@
 @import "variables.less";
 
 body {
-    overflow: hidden;
     background-color:@notebook_background;
+}
+    
+body.notebook_app {
+    overflow: hidden;
 }
 
 blockquote {
